--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "3.x",
     "node-rest-client": "0.7.5",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "jade": "*"
   }
 }
